# PicoDVI

software/: CMakeLists.txt
software/apps/: CMakeLists.txt
software/apps/infones/: CMakeLists.txt  main.c
software/apps/infones/infones/: InfoNES.c
software/include/: common_dvi_pin_configs.h
